# dragonfly

./: .gitignore  .glitchtiprc.example  .sentryclirc.example  Cargo.toml  README.md  SETUP.md  Taskfile.yml  WARP.md  remove_tm_snapshots.sh  test-glitchtip.sh
crates/dragonfly-cleaner/: Cargo.toml  dragonfly-cleaner.cdx.json
crates/dragonfly-cleaner/src/: ai_artifacts.rs  cleaner.rs  lib.rs  recovery.rs  targets.rs  time_machine.rs
crates/dragonfly-cli/: Cargo.toml  dragonfly-cli.cdx.json
crates/dragonfly-cli/src/: error_tracking.rs  lib.rs  main.rs  types.rs
crates/dragonfly-cli/src/commands/: analyze.rs  clean.rs  duplicates.rs  health.rs  mod.rs  monitor.rs  recover.rs  skills.rs
crates/dragonfly-cli/src/ui/: colors.rs  mod.rs  progress.rs  table.rs
crates/dragonfly-core/: Cargo.toml  dragonfly-core.cdx.json
crates/dragonfly-core/src/: error.rs  lib.rs  use_cases.rs
crates/dragonfly-core/src/domain/: entities.rs  events.rs  mod.rs  value_objects.rs
crates/dragonfly-core/src/ports/: mod.rs
crates/dragonfly-disk/: Cargo.toml  dragonfly-disk.cdx.json
crates/dragonfly-disk/src/: analyzer.rs  lib.rs  strategies.rs
crates/dragonfly-duplicates/: Cargo.toml  dragonfly-duplicates.cdx.json
crates/dragonfly-duplicates/src/: detector.rs  hasher.rs  lib.rs
crates/dragonfly-monitor/: Cargo.toml  dragonfly-monitor.cdx.json
crates/dragonfly-monitor/src/: collector.rs  lib.rs  metrics.rs
crates/dragonfly-tui/: Cargo.toml
crates/dragonfly-tui/src/: animation.rs  app.rs  lib.rs
docs/: AI_AGENT_CLEANUP_IMPLEMENTATION.md  AI_AGENT_CLEANUP_STRATEGY.md  ERROR_TRACKING.md  MVP_COMPLETE.md  MVP_SUMMARY.md  QUICK_START_GLITCHTIP.md  SENTRY_INTEGRATION.md  SENTRY_SETUP.md  SKILLs.md  TESTING_GLITCHTIP.md
scripts/: move-rancher-to-ssd.sh
