[package]
name = "dragonfly-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Command-line interface for DragonFly macOS maintenance utility"
readme = "README.md"

[dependencies]
dragonfly-core.workspace = true
dragonfly-disk.workspace = true
dragonfly-duplicates.workspace = true
dragonfly-monitor.workspace = true
dragonfly-cleaner.workspace = true

tokio.workspace = true
async-trait.workspace = true

clap.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
console.workspace = true
colored.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

anyhow.workspace = true
thiserror.workspace = true
color-eyre.workspace = true

sentry.workspace = true

sysinfo.workspace = true
humansize.workspace = true
chrono.workspace = true

[[bin]]
name = "dragonfly"
path = "src/main.rs"
