[package]
name = "dragonfly-disk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Disk analysis module for DragonFly"
readme = "README.md"

[dependencies]
dragonfly-core.workspace = true

tokio.workspace = true
async-trait.workspace = true

walkdir.workspace = true
jwalk.workspace = true
ignore.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true

anyhow.workspace = true
thiserror.workspace = true

rayon.workspace = true
humansize.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
mockall.workspace = true
