[package]
name = "dragonfly-duplicates"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Duplicate file finder module for DragonFly"
readme = "README.md"

[dependencies]
dragonfly-core.workspace = true

tokio.workspace = true
async-trait.workspace = true

blake3.workspace = true
xxhash-rust.workspace = true

walkdir.workspace = true
jwalk.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true

anyhow.workspace = true
thiserror.workspace = true

rayon.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
mockall.workspace = true
