[package]
name = "dragonfly-monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "System monitoring module for DragonFly"
readme = "README.md"

[dependencies]
dragonfly-core.workspace = true

tokio.workspace = true
async-trait.workspace = true

sysinfo.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true

anyhow.workspace = true
thiserror.workspace = true

libc.workspace = true

[dev-dependencies]
rstest.workspace = true
mockall.workspace = true
